test: add constraint validation tests