@@ -1,18 +1,19 @@
 package be.cytomine.appengine.utils;
 
-import java.lang.reflect.InvocationTargetException;
+import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import be.cytomine.appengine.dto.inputs.task.GenericParameterProvision;
+import be.cytomine.appengine.dto.inputs.task.ParameterType;
 import be.cytomine.appengine.dto.inputs.task.TaskRunParameterValue;
 import be.cytomine.appengine.dto.inputs.task.types.bool.BooleanValue;
 import be.cytomine.appengine.dto.inputs.task.types.enumeration.EnumerationValue;
@@ -23,6 +24,7 @@ import be.cytomine.appengine.dto.inputs.task.types.integer.IntegerValue;
 import be.cytomine.appengine.dto.inputs.task.types.string.StringValue;
 import be.cytomine.appengine.dto.inputs.task.types.wsi.WsiValue;
 import be.cytomine.appengine.models.BaseEntity;
+import be.cytomine.appengine.models.task.Input;
 
 public class TaskTestsUtils {
 
@@ -32,11 +34,11 @@ public class TaskTestsUtils {
                 .map(entity -> {
                     try {
                         return (String) entity.getClass().getMethod("getName").invoke(entity);
-                    } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+                    } catch (Exception e) {
                         throw new RuntimeException(e);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static <E extends BaseEntity> boolean areSetEquals(Set<E> expected, List<E> actual) {
@@ -143,39 +145,39 @@ public class TaskTestsUtils {
 
         switch (type) {
             case "boolean":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.BOOLEAN);
+                provision.setType(ParameterType.BOOLEAN);
                 provision.setValue(Boolean.parseBoolean(value));
                 break;
             case "integer":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.INTEGER);
+                provision.setType(ParameterType.INTEGER);
                 provision.setValue(Integer.parseInt(value));
                 break;
             case "number":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.NUMBER);
+                provision.setType(ParameterType.NUMBER);
                 provision.setValue(Double.parseDouble(value));
                 break;
             case "string":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.STRING);
+                provision.setType(ParameterType.STRING);
                 provision.setValue(value);
                 break;
             case "enumeration":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.ENUMERATION);
+                provision.setType(ParameterType.ENUMERATION);
                 provision.setValue(value);
                 break;
             case "geometry":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.GEOMETRY);
+                provision.setType(ParameterType.GEOMETRY);
                 provision.setValue(value);
                 break;
             case "image":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.IMAGE);
+                provision.setType(ParameterType.IMAGE);
                 provision.setValue(value.getBytes());
                 break;
             case "wsi":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.WSI);
+                provision.setType(ParameterType.WSI);
                 provision.setValue(value.getBytes());
                 break;
             case "file":
-                provision.setType(be.cytomine.appengine.dto.inputs.task.ParameterType.FILE);
+                provision.setType(ParameterType.FILE);
                 provision.setValue(value.getBytes());
                 break;
             default:
@@ -183,5 +185,30 @@ public class TaskTestsUtils {
         }
 
         return provision;
+    }
+
+    public static Object parseValue(String value, Input input) {
+        final File file;
+        Set<String> binaryType = Set.of("image", "wsi");
+        if (binaryType.contains(input.getType().getId())) {
+            file = FileHelper.write(input.getName(), value.getBytes());
+            file.deleteOnExit();
+        } else {
+            file = null;
+        }
+
+        Map<String, Function<String, Object>> parsers = Map.of(
+            "integer", v -> Integer.parseInt(v),
+            "number", v -> Double.parseDouble(v),
+            "string", v -> value,
+            "image", v -> file,
+            "wsi", v -> file
+        );
+
+        Function<String, Object> parser = parsers.getOrDefault(input.getType().getId(), v -> {
+            throw new RuntimeException("Unknown type: " + input.getType().getId());
+        });
+
+        return parser.apply(value);
     }
 }
